--- a/Client/Style/main.scss
+++ b/Client/Style/main.scss
@@ -121,8 +121,6 @@
       overflow-x: hidden;
       border: solid 1px;
       border-radius: 40px;
-      // display: flex;
-      // flex-direction: column;
 
       >div {
         width: 200px;
@@ -140,4 +138,11 @@
   }
 }
 }
+// >input{
+//   // width: 30px;
+// }
 
+
+a{
+    
+}
